--- a/GestorRecetas/src/main/resources/templates/create-menu.html
+++ b/GestorRecetas/src/main/resources/templates/create-menu.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Menu</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Create Menu</h1>
-<form action="/Menu/create" method="POST">
-    <label for="recipes">Select Recipes:</label>
-    <select id="recipes" name="recipes" multiple>
-        <option th:each="recipe : ${recipes}" th:value="${recipe.idRecipe}" th:text="${recipe.name}"></option>
-    </select><br><br>
-
-    <button type="submit">Create Menu</button>
-</form>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Create Menu</h1>
+    <form action="/Menu/create" method="POST">
+        <div class="form-group">
+            <label for="recipes">Select Recipes:</label>
+            <select id="recipes" name="recipes" class="form-control" multiple>
+                <option th:each="recipe : ${recipes}" th:value="${recipe.idRecipe}" th:text="${recipe.name}"></option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Create Menu</button>
+    </form>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
