--- a/GestorRecetas/src/main/resources/templates/list-ingredient.html
+++ b/GestorRecetas/src/main/resources/templates/list-ingredient.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingredients List</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1>List of Ingredients</h1>
-
-<!-- Tabla para listar los ingredientes -->
-<table border="1">
-    <thead>
+<body class="container mt-5">
+<h1 class="text-center">List of Ingredients</h1>
+<table class="table table-bordered">
+    <thead class="thead-dark">
     <tr>
         <th>ID</th>
         <th>Name</th>
         <th>Quantity</th>
         <th>Unit</th>
         <th>Status</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
-    <!-- Rellenar la tabla con ingredientes obtenidos del backend -->
     <tr th:each="ingredient : ${ingredients}">
         <td th:text="${ingredient.idIngredient}"></td>
         <td th:text="${ingredient.name}"></td>
@@ -28,12 +27,12 @@
         <td th:text="${ingredient.unit}"></td>
         <td th:text="${ingredient.status}"></td>
         <td>
-            <a th:href="@{/Ingredient/updateForm(id=${ingredient.idIngredient})}">Edit</a>
-            <a th:href="@{/Ingredient/statusForm(id=${ingredient.idIngredient})}">Update Status</a>
+            <a th:href="@{/Ingredient/updateForm(id=${ingredient.idIngredient})}" class="btn btn-sm btn-info">Edit</a>
+            <a th:href="@{/Ingredient/statusForm(id=${ingredient.idIngredient})}" class="btn btn-sm btn-warning">Update Status</a>
         </td>
     </tr>
     </tbody>
 </table>
-
 </body>
 </html>
+
