--- a/GestorRecetas/src/main/resources/templates/create-ingredient.html
+++ b/GestorRecetas/src/main/resources/templates/create-ingredient.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Ingredient</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Create Ingredient</h1>
-
-<!-- Formulario de creación de ingredientes -->
-<form action="/Ingredient/create" method="POST">
-
-    <label for="name">Ingredient Name:</label>
-    <input type="text" id="name" name="name" required><br><br>
-
-    <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" name="quantity" required><br><br>
-
-    <label for="unit">Unit:</label>
-    <select id="unit" name="unit" required>
-        <option value="" disabled selected>Select a unit</option>
-        <option value="kg">Kilograms (kg)</option>
-        <option value="lt">Liters (lt)</option>
-    </select><br><br>
-
-    <button type="submit">Create Ingredient</button>
-</form>
-
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Create Ingredient</h1>
+    <form action="/Ingredient/create" method="POST">
+        <div class="form-group">
+            <label for="name">Ingredient Name:</label>
+            <input type="text" id="name" name="name" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="quantity">Quantity:</label>
+            <input type="number" id="quantity" name="quantity" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="unit">Unit:</label>
+            <select id="unit" name="unit" class="form-control" required>
+                <option value="" disabled selected>Select a unit</option>
+                <option value="kg">Kilograms (kg)</option>
+                <option value="lt">Liters (lt)</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Create Ingredient</button>
+    </form>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
