--- a/GestorRecetas/src/main/resources/templates/excel-menu.html
+++ b/GestorRecetas/src/main/resources/templates/excel-menu.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Export Ingredients to Excel</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1>Export Ingredients to Excel</h1>
-<form action="/Menu/exportIngredients" method="POST">
+<body class="container mt-5">
+<h1 class="text-center">Export Ingredients to Excel</h1>
+<form action="/Menu/exportIngredients" method="POST" class="form-group">
     <label for="idMenu">Select Menu ID:</label>
-    <input type="number" id="idMenu" name="idMenu" required>
-    <br><br>
-    <button type="submit">Export Ingredients</button>
+    <input type="number" id="idMenu" name="idMenu" class="form-control" required>
+    <button type="submit" class="btn btn-primary mt-3">Export Ingredients</button>
 </form>
 </body>
 </html>
