--- a/GestorRecetas/src/main/resources/templates/list-menu.html
+++ b/GestorRecetas/src/main/resources/templates/list-menu.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Menus</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1>List of Menus</h1>
-<table border="1">
-    <thead>
+<body class="container mt-5">
+<h1 class="text-center">List of Menus</h1>
+<table class="table table-bordered">
+    <thead class="thead-dark">
     <tr>
         <th>ID</th>
         <th>Recipes</th>
@@ -20,15 +21,15 @@
     <tr th:each="menu : ${menus}">
         <td th:text="${menu.idMenu}"></td>
         <td>
-            <ul>
+            <ul class="list-unstyled">
                 <li th:each="recipe : ${menu.recipes}" th:text="${recipe.name}"></li>
             </ul>
         </td>
         <td th:text="${menu.status}"></td>
         <td>
-            <a th:href="@{/Menu/updateForm(id=${menu.idMenu})}">Edit</a>
-            <a th:href="@{/Menu/statusForm(id=${menu.idMenu})}">Update Status</a>
-            <a th:href="@{/Menu/excelForm(id=${menu.idMenu})}">Export Ingredients</a>
+            <a th:href="@{/Menu/updateForm(id=${menu.idMenu})}" class="btn btn-sm btn-info">Edit</a>
+            <a th:href="@{/Menu/statusForm(id=${menu.idMenu})}" class="btn btn-sm btn-warning">Update Status</a>
+            <a th:href="@{/Menu/excelForm(id=${menu.idMenu})}" class="btn btn-sm btn-primary">Export Ingredients</a>
         </td>
     </tr>
     </tbody>
