--- a/GestorRecetas/src/main/resources/templates/list-recipe.html
+++ b/GestorRecetas/src/main/resources/templates/list-recipe.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Recipes</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1>List of Recipes</h1>
-<table border="1">
-    <thead>
+<body class="container mt-5">
+<h1 class="text-center">List of Recipes</h1>
+<table class="table table-bordered">
+    <thead class="thead-dark">
     <tr>
         <th>ID</th>
         <th>Name</th>
@@ -16,6 +17,8 @@
         <th>Minutes</th>
         <th>Preparation</th>
         <th>Status</th>
+        <th>Ingredients</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -27,15 +30,17 @@
         <td th:text="${recipe.preparation}"></td>
         <td th:text="${recipe.status}"></td>
         <td>
-            <ul>
+            <ul class="list-unstyled">
                 <li th:each="ingredient : ${recipe.ingredients}" th:text="${ingredient.name}"></li>
             </ul>
         </td>
-        <td><a th:href="@{/Recipe/updateForm(id=${recipe.idRecipe})}">Edit</a></td>
-        <td><a th:href="@{/Recipe/statusForm(id=${recipe.idRecipe})}">Update Status</a></td>
-        <td><a th:href="@{/Recipe/favoriteForm(id=${recipe.idRecipe})}">Favorite</a></td>
-        <td><a th:href="@{/Recipe/updateReviewForm(id=${recipe.idRecipe})}">Update Review</a></td>
-        <td><a th:href="@{/Recipe/reviewCount}">View Recipe Review Count</a></td>
+        <td>
+            <a th:href="@{/Recipe/updateForm(id=${recipe.idRecipe})}" class="btn btn-sm btn-info">Edit</a>
+            <a th:href="@{/Recipe/statusForm(id=${recipe.idRecipe})}" class="btn btn-sm btn-warning">Update Status</a>
+            <a th:href="@{/Recipe/favoriteForm(id=${recipe.idRecipe})}" class="btn btn-sm btn-success">Favorite</a>
+            <a th:href="@{/Recipe/updateReviewForm(id=${recipe.idRecipe})}" class="btn btn-sm btn-secondary">Update Review</a>
+            <a th:href="@{/Recipe/reviewCount}" class="btn btn-sm btn-primary">View Reviews</a>
+        </td>
     </tr>
     </tbody>
 </table>
