--- a/GestorRecetas/src/main/resources/templates/update-favorite-recipe.html
+++ b/GestorRecetas/src/main/resources/templates/update-favorite-recipe.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite Recipe</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Favorite Recipe</h1>
-<form action="/Recipe/favorite" method="POST">
-    <label for="id">Recipe ID:</label>
-    <input type="number" id="id" name="id" required><br><br>
-
-    <button type="submit">Mark as Favorite</button>
-</form>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Favorite Recipe</h1>
+    <form action="/Recipe/favorite" method="POST">
+        <div class="form-group">
+            <label for="id">Recipe ID:</label>
+            <input type="number" id="id" name="id" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-success btn-block">Mark as Favorite</button>
+    </form>
+</div>
 </body>
 </html>
